added pause menu
buttons don't currently have functionality and permanently pauses the game

--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -207,6 +207,29 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
@@ -214,6 +237,13 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -268,6 +298,188 @@ StaticMeshActor.Replication=True
 StaticMeshActor.Networking=True
 StaticMeshActor.WorldPartition=True
 StaticMeshActor.Actor=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Rendering=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+BackgroundBlur.Layout=True
+BackgroundBlur.Content=True
+BackgroundBlur.Appearance=True
+BackgroundBlur.Accessibility=True
+BackgroundBlur.Behavior=True
+BackgroundBlur.Render Transform=True
+BackgroundBlur.Performance=True
+BackgroundBlur.Rendering=True
+BackgroundBlur.Navigation=True
+BackgroundBlur.Localization=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Rendering=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Rendering=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Rendering=True
+Widget.Navigation=True
+Widget.Localization=True
+Widget.Layout=True
+BP_TopDownCharacter_C.TransformCommon=True
+BP_TopDownCharacter_C.Animation=True
+BP_TopDownCharacter_C.Mesh=True
+BP_TopDownCharacter_C.Tick=True
+BP_TopDownCharacter_C.Camera=True
+BP_TopDownCharacter_C.ComponentTick=True
+BP_TopDownCharacter_C.Clothing=True
+BP_TopDownCharacter_C.Physics=True
+BP_TopDownCharacter_C.Collision=True
+BP_TopDownCharacter_C.LeaderPoseComponent=True
+BP_TopDownCharacter_C.Lighting=True
+BP_TopDownCharacter_C.AnimationRig=True
+BP_TopDownCharacter_C.Deformer=True
+BP_TopDownCharacter_C.SkinWeights=True
+BP_TopDownCharacter_C.Rendering=True
+BP_TopDownCharacter_C.HLOD=True
+BP_TopDownCharacter_C.PathTracing=True
+BP_TopDownCharacter_C.Mobile=True
+BP_TopDownCharacter_C.Navigation=True
+BP_TopDownCharacter_C.RayTracing=True
+BP_TopDownCharacter_C.VirtualTexture=True
+BP_TopDownCharacter_C.Tags=True
+BP_TopDownCharacter_C.AssetUserData=True
+BP_TopDownCharacter_C.Replication=True
+BP_TopDownCharacter_C.ComponentReplication=True
+BP_TopDownCharacter_C.Activation=True
+BP_TopDownCharacter_C.Variable=True
+BP_TopDownCharacter_C.Cooking=True
+BP_TopDownCharacter_C.Character Movement (General Settings)=True
+BP_TopDownCharacter_C.Character Movement: Walking=True
+BP_TopDownCharacter_C.Character Movement: Jumping / Falling=True
+BP_TopDownCharacter_C.Character Movement: Gravity=True
+BP_TopDownCharacter_C.Character Movement (Networking)=True
+BP_TopDownCharacter_C.Character Movement: Swimming=True
+BP_TopDownCharacter_C.Character Movement: Flying=True
+BP_TopDownCharacter_C.Character Movement: Custom Movement=True
+BP_TopDownCharacter_C.Character Movement (Rotation Settings)=True
+BP_TopDownCharacter_C.Character Movement: Physics Interaction=True
+BP_TopDownCharacter_C.Character Movement=True
+BP_TopDownCharacter_C.Character Movement: Avoidance=True
+BP_TopDownCharacter_C.RootMotion=True
+BP_TopDownCharacter_C.Character Movement: NavMesh Movement=True
+BP_TopDownCharacter_C.NavMovement=True
+BP_TopDownCharacter_C.Velocity=True
+BP_TopDownCharacter_C.PlanarMovement=True
+BP_TopDownCharacter_C.MovementComponent=True
+BP_TopDownCharacter_C.Shape=True
+BP_TopDownCharacter_C.Character=True
+BP_TopDownCharacter_C.Pawn=True
+BP_TopDownCharacter_C.Actor=True
+BP_TopDownCharacter_C.Input=True
+BP_TopDownCharacter_C.WorldPartition=True
+BP_TopDownCharacter_C.Events=True
+BP_TopDownCharacter_C.Materials=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.LeaderPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.AnimationRig=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Deformer=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.PathTracing=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.PathTracing=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
+BP_TopDownController_C.Input=True
+BP_TopDownController_C.Tick=True
+BP_TopDownController_C.PlayerController=True
+BP_TopDownController_C.Cheat Manager=True
+BP_TopDownController_C.MouseInterface=True
+BP_TopDownController_C.Game=True
+BP_TopDownController_C.WorldPartition=True
+BP_TopDownController_C.Controller=True
+BP_TopDownController_C.Replication=True
+BP_TopDownController_C.Actor=True
+BP_TopDownController_C.HLOD=True
+BP_TopDownController_C.Physics=True
+BP_TopDownController_C.Events=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1382,6 +1594,24 @@ MovieSceneCapture.LastCompileMethod=Unknown
 LastDirectory=
 RecentsFiles=D:/coursework/unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[DetailCustomWidgetExpansion]
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Pause.IA_Pause
+InputAction=
+
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
 PreviewWidth=1280
@@ -1393,7 +1623,12 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Menus/WB_PauseMenu
+MRUItem0=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem1=/Game/TopDown/Input/IMC_Default
+MRUItem2=/Game/Input/IA_Pause
+MRUItem3=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem4=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem5=/Game/Menus/WB_PauseMenu
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1462,4 +1697,85 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
+
+[DetailPropertyExpansion]
+BackgroundBlur="\"Object.Appearance.LowQualityFallbackBrush\" \"Object.Appearance.LowQualityFallbackBrush.TintColor\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
+Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[2]\" "
+DataAsset=
+
+[AssetEditorToolkitTabLocation]
+/Game/Menus/WB_PauseMenu.WB_PauseMenu=1
+/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
+/Game/TopDown/Input/Actions/IA_SetDestination_Touch.IA_SetDestination_Touch=1
+/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=1
+/Game/Input/IA_Pause.IA_Pause=1
+/Game/Input/IMC_Default.IMC_Default=1
+/Game/TopDown/Input/IMC_Default.IMC_Default=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=True
+ContextMenuTimeSlicingThresholdMs=50
+bIncludeActionsForSelectedAssetsInContextMenu=False
+bLimitAssetActionBindingToSingleSelectionOnly=False
+bLoadSelectedAssetsForContextMenuActionBinding=True
+bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
+
+[MessageLog]
+LastLogListing=BlueprintLog
 
