resume button implemented
game now resumes when the resume button is clicked, will add settings functionality later and maybe change the design

--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -237,12 +237,13 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/Menus/WB_PauseMenu.WB_PauseMenu
 OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
 
 [DetailCategories]
@@ -480,6 +481,9 @@ InputMappingContext.Description=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1623,12 +1627,12 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem1=/Game/TopDown/Input/IMC_Default
-MRUItem2=/Game/Input/IA_Pause
-MRUItem3=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
-MRUItem4=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem5=/Game/Menus/WB_PauseMenu
+MRUItem0=/Game/Menus/WB_PauseMenu
+MRUItem1=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem2=/Game/TopDown/Input/IMC_Default
+MRUItem3=/Game/Input/IA_Pause
+MRUItem4=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1704,7 +1708,7 @@ ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
