--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,7 +235,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -534,7 +534,7 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1280.000 Y=720.000
+WindowSize=X=1282.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1626,6 +1626,7 @@ MovieSceneCapture.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/coursework/unreal/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
