--- a/UnrealGame/Group4Game/Group4Game.uproject
+++ b/UnrealGame/Group4Game/Group4Game.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{8A3E9F94-4B9F-640B-C8E5-A3828641EEFD}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
