--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,11 +235,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -247,6 +248,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/UI/WB_GameUI.WB_GameUI
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -590,6 +592,21 @@ MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
+WB_GameUI_C.Appearance=True
+WB_GameUI_C.Input=True
+WB_GameUI_C.Interaction=True
+WB_GameUI_C.Designer=True
+WB_GameUI_C.Performance=True
+WB_GameUI_C.Layout=True
+WB_GameUI_C.Behavior=True
+WB_GameUI_C.Render Transform=True
+WB_GameUI_C.Localization=True
+WB_GameUI_C.Accessibility=True
+WB_GameUI_C.Rendering=True
+WB_GameUI_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
@@ -1742,16 +1759,17 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/TopDown/Maps/MainMenu
-MRUItem1=/Game/TopDown/Maps/TopDownMap
-MRUItem2=/Game/Menus/WB_MainMenu
-MRUItem3=/Game/Menus/WB_PauseMenu
-MRUItem4=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem6=/Game/TopDown/Input/IMC_Default
-MRUItem7=/Game/Input/IA_Pause
-MRUItem8=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem9=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
+MRUItem0=/Game/UI/WB_GameUI
+MRUItem1=/Game/Menus/WB_MainMenu
+MRUItem2=/Game/TopDown/Maps/MainMenu
+MRUItem3=/Game/TopDown/Maps/TopDownMap
+MRUItem4=/Game/Menus/WB_PauseMenu
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem7=/Game/TopDown/Input/IMC_Default
+MRUItem8=/Game/Input/IA_Pause
+MRUItem9=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem10=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1825,9 +1843,9 @@ TreeViewWidth=0.300000
 BackgroundBlur="\"Object.Appearance.LowQualityFallbackBrush\" \"Object.Appearance.LowQualityFallbackBrush.TintColor\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1837,11 +1855,12 @@ TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransfo
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[2]\" "
 DataAsset=
 WB_PauseMenu_C=
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_MainMenu_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+WB_GameUI_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Menus/WB_PauseMenu.WB_PauseMenu=1
@@ -1854,6 +1873,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 /Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode=1
 /Game/TopDown/Maps/MainMenu.MainMenu:PersistentLevel.MainMenu=1
 /Game/Menus/WB_MainMenu.WB_MainMenu=1
+/Game/UI/WB_GameUI.WB_GameUI=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1914,4 +1934,7 @@ LastLogListing=BlueprintLog
 [MRU]
 MRUItem0=/Game/TopDown/Maps/MainMenu
 MRUItem1=/Game/TopDown/Maps/TopDownMap
+
+[DetailCategoriesAdvanced]
+TextBlock.Behavior=True
 
