--- a/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealGame/Group4Game/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -219,7 +219,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -248,6 +248,7 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode
 
 [DetailCategories]
 PlayerStart.TransformCommon=True
@@ -626,6 +627,7 @@ BP_PhysDoor_C.Networking=True
 BP_PhysDoor_C.WorldPartition=True
 BP_PhysDoor_C.Input=True
 BP_PhysDoor_C.Actor=True
+BP_TopDownGameMode_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Door/BP_PhysDoor.BP_PhysDoor;
@@ -1780,16 +1782,16 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/WB_GameUI
-MRUItem1=/Game/Menus/WB_MainMenu
-MRUItem2=/Game/TopDown/Maps/MainMenu
-MRUItem3=/Game/TopDown/Maps/TopDownMap
-MRUItem4=/Game/Menus/WB_PauseMenu
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem7=/Game/TopDown/Input/IMC_Default
-MRUItem8=/Game/Input/IA_Pause
-MRUItem9=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem0=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem1=/Game/UI/WB_GameUI
+MRUItem2=/Game/Menus/WB_MainMenu
+MRUItem3=/Game/TopDown/Maps/MainMenu
+MRUItem4=/Game/TopDown/Maps/TopDownMap
+MRUItem5=/Game/Menus/WB_PauseMenu
+MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem8=/Game/TopDown/Input/IMC_Default
+MRUItem9=/Game/Input/IA_Pause
 MRUItem10=/Game/TopDown/Input/Actions/IA_SetDestination_Touch
 
 [UMGSequencerSettings SequencerSettings]
@@ -1864,8 +1866,8 @@ TreeViewWidth=0.300000
 BackgroundBlur="\"Object.Appearance.LowQualityFallbackBrush\" \"Object.Appearance.LowQualityFallbackBrush.TintColor\" \"Object.Appearance.LowQualityFallbackBrush.OutlineSettings.Color\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 Object=
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1876,12 +1878,12 @@ TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransfo
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[2]\" "
 DataAsset=
 WB_PauseMenu_C=
-UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 WB_MainMenu_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-WB_GameUI_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_GameUI_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Menus/WB_PauseMenu.WB_PauseMenu=1
